k8s/external-dns/02-NginxApp1-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app1-nginx
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"backend-cdn"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
