k8s/external-dns/04-NginxApp2-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
  labels:
    app: app2-nginx
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"backend-cdn"}}'
    cloud.google.com/neg: '{"ingress": true}'
  
spec:
  type: NodePort
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
