k8s/external-dns/hello_k8s_gce.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-gce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s-gce
  template:
    metadata:
      labels:
        app: hello-k8s-gce
         
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-gce
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"backend-cdn"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  # GCE Ingress has to be 'NodePort' or 'LoadBalancer'
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-k8s-gce
